# nrf52811-pac

./: Cargo.toml  README.md  device.x  update.sh
src/: bprot.rs  clock.rs  ficr.rs  gpiote.rs  lib.rs  nvmc.rs  power.rs  radio.rs  saadc.rs  spim0.rs  uicr.rs
src/bprot/: config0.rs  config1.rs  disableindebug.rs
src/clock/: events_done.rs  intenclr.rs  intenset.rs  tasks_cal.rs  tasks_hfclkstart.rs  tasks_hfclkstop.rs
src/comp/: psel.rs
src/ficr/: info.rs
src/ficr/info/: flash.rs  package.rs  part.rs  ram.rs  variant.rs
src/nvmc/: config.rs  eraseall.rs  ready.rs
src/power/: ram.rs  resetreas.rs
src/radio/: dfectrl1.rs  events_phyend.rs  intenclr.rs  intenset.rs  txpower.rs
src/radio/dfepacket/: maxcnt.rs
src/spim1/rxd/: amount.rs  maxcnt.rs
src/spim1/txd/: maxcnt.rs
src/spis0/rxd/: amount.rs
src/spis1/txd/: amount.rs
src/twim0/rxd/: amount.rs
src/twis0/rxd/: amount.rs  maxcnt.rs
src/twis0/txd/: amount.rs  maxcnt.rs
src/uart0/: config.rs
